--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>
       Best Chocolate Chip Cookies
-      <img src="http://lorempixel.com/400/200/" alt="An image of a cookie" />
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9rKee_ZbmEdQkHm2Z6Jt7vr7cMzq3jTsP3XxvY66wvw&s" alt="An image of a cookie" />
     </h1>
     <p>
       This recipe is from my dad and they are a favorite among friends and
